--- a/day16/app1/src/app/first/first.component.html
+++ b/day16/app1/src/app/first/first.component.html
@@ -1,1 +1,23 @@
 <p>first works!</p>
+
+
+
+<div>First Name: {{firstname}}</div>
+<div>Last Name: {{lastname}}</div>
+<hr>
+
+<div class="person1">
+<div>Name: {{person.name}}</div>
+<div>Age: {{person.age}}</div>
+<div>Adresss: {{person.address}}</div>
+</div>
+
+
+
+<hr>
+
+<div class="person2">
+<div>Name: {{person.name}}</div>
+<div>Age: {{person.age}}</div>
+<div>Adresss: {{person.address}}</div>
+</div>
