--- a/day16/app1/src/app/app.component.html
+++ b/day16/app1/src/app/app.component.html
@@ -1,5 +1,8 @@
 <h1>welcome</h1>
 
-<app-first></app-first>
+<!-- <app-first></app-first>
 <hr/>
-<app-second></app-second>
+<app-second></app-second> -->
+
+
+<app-third></app-third>
