--- a/day16/app1/src/app/third/third.component.html
+++ b/day16/app1/src/app/third/third.component.html
@@ -6,3 +6,14 @@
 [class.blue-box]="boxType==2"
 [class.green-box]="boxType==3"
 class="box"></div>
+
+
+<hr/>
+<button [class.red-box]="buttonType==1">1</button>
+<button [class.red-box]="buttonType==2">2</button>
+<button [class.red-box]="buttonType==3">3</button>
+<button [class.red-box]="buttonType==4">4</button>
+<button [class.red-box]="buttonType==5">5</button>
+<button [class.red-box]="buttonType==6">6</button>
+<button [class.red-box]="buttonType==7">7</button>
+<button [class.red-box]="buttonType==8">8</button>
