--- a/day16/app1/src/app/app.component.html
+++ b/day16/app1/src/app/app.component.html
@@ -8,3 +8,15 @@
 <!-- <app-third></app-third> -->
 
 <app-forth></app-forth>
+<hr/>
+<app-forth></app-forth>
+
+<hr/>
+<app-forth></app-forth>
+
+<hr/>
+<app-forth></app-forth>
+
+<hr/>
+<app-forth></app-forth>
+
