--- a/day17/app1/src/app/employee-list/employee-list.component.html
+++ b/day17/app1/src/app/employee-list/employee-list.component.html
@@ -1,9 +1,18 @@
 <h2>Employee List</h2>
 
-<hr>
+<hr/>
 
 <div>Name :{{employees[0]['name']}}</div>
 <div>id :{{employees[0]['id']}}</div>
 <div>Department :{{employees[0]['department']}}</div>
 
-<hr>
+<hr/>
+
+<div *ngFor="let employee of employees">
+    <div>Name :{{employee['name']}}</div>
+    <div>id :{{employee['id']}}</div>
+    <div>Department :{{employee['department']}}</div>
+
+</div>
+
+<hr/>
