--- a/day17/app1/src/app/app.component.html
+++ b/day17/app1/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>app component</h1>
 
-<app-employee-list></app-employee-list>
+<!-- <app-employee-list></app-employee-list> -->
+
+<app-car-list></app-car-list>
