--- a/day17/app1/src/app/employee-list/employee-list.component.html
+++ b/day17/app1/src/app/employee-list/employee-list.component.html
@@ -8,7 +8,7 @@
 
 <hr/>
 
-<div *ngFor="let employee of employees">
+<div class="employee" *ngFor="let employee of employees">
     <div>Name :{{employee['name']}}</div>
     <div>id :{{employee['id']}}</div>
     <div>Department :{{employee['department']}}</div>
