--- a/day17/app1/src/app/app.component.html
+++ b/day17/app1/src/app/app.component.html
@@ -1,5 +1,11 @@
-<h1>app component</h1>
+
 
 <!-- <app-employee-list></app-employee-list> -->
 
-<app-car-list></app-car-list>
+<!-- <app-car-list></app-car-list> -->
+
+<div class="container">
+  
+<app-mobile-list></app-mobile-list>
+
+</div>
