--- a/day17/app1/src/app/mobile-list/mobile-list.component.html
+++ b/day17/app1/src/app/mobile-list/mobile-list.component.html
@@ -1,6 +1,6 @@
 <h2>List of mobiles</h2>
 
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered table-dark">
   <thead>
     <tr>
       <th style="width: 100px;">Sr. No</th>
