--- a/day17/app1/src/app/app.component.html
+++ b/day17/app1/src/app/app.component.html
@@ -6,6 +6,6 @@
 
 <div class="container">
   
-<app-mobile-list></app-mobile-list>
-
+<!-- <app-mobile-list></app-mobile-list> -->
+<app-accordion></app-accordion>
 </div>
