--- a/day17/app1/src/app/app.component.html
+++ b/day17/app1/src/app/app.component.html
@@ -8,4 +8,7 @@
   
 <!-- <app-mobile-list></app-mobile-list> -->
 <app-accordion></app-accordion>
+<app-accordion></app-accordion>
+<app-accordion></app-accordion>
+
 </div>
