--- a/day17/app1/src/app/app.component.html
+++ b/day17/app1/src/app/app.component.html
@@ -7,8 +7,9 @@
 <div class="container">
   
 <!-- <app-mobile-list></app-mobile-list> -->
+<!-- <app-accordion></app-accordion>
 <app-accordion></app-accordion>
-<app-accordion></app-accordion>
-<app-accordion></app-accordion>
+<app-accordion></app-accordion> -->
 
+<app-star></app-star>
 </div>
