--- a/day18/app1/src/app/add-product/add-product.component.html
+++ b/day18/app1/src/app/add-product/add-product.component.html
@@ -3,7 +3,7 @@
 <div class="form">
     <div class="form-group">
         <label for="">Title</label>
-        <input type="text" name="" id="" class="form-control">
+        <input (keydown)="onKeyDown($event)" (keyup)="onKeyUp($event)" (change)="onTitleChange($event)" type="text" name="" id="" class="form-control">
     </div>
     <div class="form-group">
         <label for="">Price</label>
