--- a/day18/app1/src/app/app.component.html
+++ b/day18/app1/src/app/app.component.html
@@ -2,5 +2,7 @@
 
 
 <div class="container">
-<app-add-product></app-add-product>
+<!-- <app-add-product></app-add-product> -->
+<app-add-product-v1></app-add-product-v1>
+
 </div>
