--- a/day18/app1/src/app/app.component.html
+++ b/day18/app1/src/app/app.component.html
@@ -3,6 +3,8 @@
 
 <div class="container">
 <!-- <app-add-product></app-add-product> -->
-<app-add-product-v1></app-add-product-v1>
+<!-- <app-add-product-v1></app-add-product-v1> -->
+<app-login></app-login>
+
 
 </div>
