--- a/day19/app1/src/app/product-list/product-list.component.html
+++ b/day19/app1/src/app/product-list/product-list.component.html
@@ -1,1 +1,41 @@
 <p>product-list works!</p>
+
+
+<div class="card">
+    <div class="card-header">
+        <h4>Product list</h4>
+    </div>
+
+    <div class="card-body">
+
+        <h4 *ngIf="products.length==0">There is no product</h4>
+
+        <table *ngIf="products.length > 0" class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th style="width: 50px;">No</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th style="width: 100px;">Price</th>
+                <th style="width: 150px;">Category</th>
+                <th style="width: 150px;">Brand</th>
+                <th style="width: 150px;">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let product of products; let index = index">
+                <td>{{index + 1}}</td>
+                <td>{{product['title']}}</td>
+                <td>{{product['description']}}</td>
+                <td>{{product['price']}}</td>
+                <td>{{product['category']['title']}}</td>
+                <td>{{product['brand']['title']}}</td>
+                <td>
+                  <button (click)="onEdit(product)" class="btn btn-warning btn-sm">Edit</button>
+                  <button (click)="onDelete(product, index)" style="margin-left: 10px;" class="btn btn-danger btn-sm">Delete</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+</div>
