--- a/day19/app1/src/app/product-list/product-list.component.html
+++ b/day19/app1/src/app/product-list/product-list.component.html
@@ -7,7 +7,8 @@
     </div>
 
     <div class="card-body">
-
+        <button (click)="loadProducts()" style="margin-bottom: 10px;" class="btn bt-sm btn-success">Load Products</button>
+        <button style="margin-bottom: 10px;" class="btn bt-sm btn-success float-right">Add</button>
         <h4 *ngIf="products.length==0">There is no product</h4>
 
         <table *ngIf="products.length > 0" class="table table-striped table-bordered">
