--- a/day19/app1/src/app/app.component.html
+++ b/day19/app1/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-  <app-product-list></app-product-list>
+  <!-- <app-product-list></app-product-list> -->
+
+  <app-product-add></app-product-add>
 </div>
