--- a/day19/app1/src/app/product-add/product-add.component.html
+++ b/day19/app1/src/app/product-add/product-add.component.html
@@ -1,1 +1,47 @@
-<p>product-add works!</p>
+<div class="card">
+    <div class="card-header">
+        <h3>Add Prodcut</h3>
+    </div>
+    <div class="card-body">
+        <div class="form">
+            <div class="form-group">
+              <label for="">Title</label>
+              <!-- <input (keydown)="onKeyDown($event)" (keyup)="onKeyUp($event)" (change)="onTitleChange($event)" type="text" class="form-control"> -->
+              <input (keyup)="onKeyUpTitle($event)" type="text" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="">Price</label>
+              <input (keyup)="onKeyUpPrice($event)" type="number" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="">Category</label>
+              <select class="form-control">
+                <option value="1">Electronics</option>
+                <option value="2">Home Decore</option>
+                <option value="3">Computers</option>
+                <option value="4">Mobiles</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+                <label for="">Brand</label>
+                <select class="form-control">
+                  <option value="1">Electronics</option>
+                  <option value="2">Home Decore</option>
+                  <option value="3">Computers</option>
+                  <option value="4">Mobiles</option>
+                </select>
+              </div
+            <div class="form-group">
+              <label for="">Description</label>
+              <textarea (keyup)="onKeyUpDescription($event)" class="form-control" rows="10"></textarea>
+            </div>
+          
+          </div>
+    </div>
+    <div class="card-footer">
+        <button class="btn btn-success">Save</button>
+        <button style="margin:5px" class="btn btn-danger">Cancle</button>
+        
+    </div>
+</div>
