--- a/day19/app1/src/app/brand-list/brand-list.component.html
+++ b/day19/app1/src/app/brand-list/brand-list.component.html
@@ -1,1 +1,25 @@
-<p>brand-list works!</p>
+<div class="card">
+    <div class="card-header">
+        <h3>Brands</h3>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Sr.no</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let brand of brands; let index=index">
+                    <td>{{index+1}}</td>
+                   <td>{{brand['title']}}</td>
+                   <td>{{brand['description']}}</td> 
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer"></div>
+
+</div>
