--- a/day18/app1/src/app/login/login.component.html
+++ b/day18/app1/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<h2>Login</h2>
+<!-- <h2>Login</h2>
 
 <div class="form">
   <div class="form-group">
@@ -15,4 +15,4 @@
     <button (click)="onLogin()" class="btn btn-success">Login</button>
     <button (click)="onCancel()" style="margin-left: 5px;" class="btn btn-danger">Cancel</button>
   </div>
-</div>
+</div> -->
