--- a/day20/admin-panel/src/app/app.component.html
+++ b/day20/admin-panel/src/app/app.component.html
@@ -14,5 +14,5 @@
 
 <div class="container">
   <router-outlet></router-outlet>
-  <app-login></app-login>
+  <!-- <app-login></app-login> -->
 </div>
