--- a/day20/admin-panel/src/app/product-list/product-list.component.html
+++ b/day20/admin-panel/src/app/product-list/product-list.component.html
@@ -1,5 +1,6 @@
 <div class="card">
     <div class="card-header">
+      <button (click)="addProduct()" class="btn btn-success float-right">Add</button>
       <h4>Product List</h4>
     </div>
     <div class="card-body">
