--- a/day22/user-portal/src/app/product/gallery/gallery.component.html
+++ b/day22/user-portal/src/app/product/gallery/gallery.component.html
@@ -17,7 +17,7 @@
   <div class="col-md-9">
     <div class="row">
       <div class="col-md-4" *ngFor="let product of products">
-        <div class="card">
+        <div class="card" style="margin-bottom:30px;">
           <img class="card-img-top" src="http://localhost:4000/product/image/{{product['image']}}" alt="">
           <div class="card-body">
             <h5 class="card-title">{{product['title']}}</h5>
